--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -17,7 +17,7 @@ SHELL	:= /bin/bash
 NAME	:= phonebook
 
 CC		:= c++
-CFLAGS	:= #-Wall -Wextra -Werror
+CFLAGS	:= -Wall -Wextra -Werror
 CFLAGS	+= -std=c++98
 
 SRCS	:= PhoneBook.cpp main.cpp
