--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: lorbke <lorbke@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 16:37:03 by lorbke            #+#    #+#              #
-#    Updated: 2023/04/17 21:56:07 by lorbke           ###   ########.fr        #
+#    Updated: 2023/05/01 15:13:01 by lorbke           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -46,7 +46,4 @@ fclean: clean
 
 re: fclean all
 
-test:
-	@$(SHELL) tester/tester.sh
-
-.PHONY: all clean fclean re test
+.PHONY: all clean fclean re
