--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -6,59 +6,60 @@
 #    By: lorbke <lorbke@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 16:37:03 by lorbke            #+#    #+#              #
-#    Updated: 2023/04/17 21:56:07 by lorbke           ###   ########.fr        #
+#    Updated: 2023/05/02 15:14:12 by lorbke           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # __________________________________________________________________ VARIABLES #
 
-SHELL	:= /bin/bash
+SHELL		:= /bin/bash
 
-NAME	:= zombieHorde
+NAME		:= zombieHorde
 
-CC		:= c++
-CFLAGS	:= -Wall -Wextra -Werror
-CFLAGS	+= -std=c++98
+CC			:= c++
+CFLAGS		:= -Wall -Wextra -Werror
+CFLAGS		+= -std=c++98
 
-SRCS	:= main.cpp Zombie.cpp zombieHorde.cpp
-OBJS	:= $(SRCS:.cpp=.o)
+SRC_PATH	:= src
+SRC			:= main.cpp newZombie.cpp zombieHorde.cpp Zombie.cpp
+OBJ_PATH	:= obj
+OBJ			:= $(SRC:%.cpp=$(OBJ_PATH)/%.o)
+INC_PATH	:= inc
+
+VPATH		:= $(SRC_PATH)
 
 # _____________________________________________________________________ COLORS #
 
-RED		:= \033[0;31m
-GREEN	:= \033[0;32m
+RED			:= \033[0;31m
+GREEN		:= \033[0;32m
+RESET		:= \033[0m
 
 # ______________________________________________________________________ RULES #
 
+.PHONY: all clean fclean re val run
+
 all: $(NAME)
 
-$(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+$(NAME): $(OBJ_PATH) $(OBJ)
+	$(CC) $(CFLAGS) -I$(INC_PATH) $(OBJ) -o $(NAME)
+	@echo -e "$(GREEN)$(NAME) [OK]$(RESET)"
 
-%.o: %.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+$(OBJ_PATH):
+	@mkdir -p $(OBJ_PATH)
+
+$(OBJ_PATH)/%.o: %.cpp
+	$(CC) $(CFLAGS) -I$(INC_PATH) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	rm -rf $(OBJ_PATH)
 
 fclean: clean
 	rm -f $(NAME)
 
-re: fclean all
-
-# ______________________________________________________________ TESTING RULES #
-
-test:
-	@$(SHELL) tester/tester.sh
+val: all
+	@valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./$(NAME)
 
 run: all
-	@./$(NAME)
+	./$(NAME)
 
-rawrun:
-	@$(CC) $(SRCS) -o $(NAME)
-	@./$(NAME)
-
-val: all
-	@valgrind --leak-check=full ./$(NAME)
-
-.PHONY: all clean fclean re test run rawrun val
+re: fclean all
