--- a/cpp00/ex02/Makefile
+++ b/cpp00/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: lorbke <lorbke@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 16:37:03 by lorbke            #+#    #+#              #
-#    Updated: 2023/04/17 21:56:07 by lorbke           ###   ########.fr        #
+#    Updated: 2023/05/03 16:09:56 by lorbke           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,7 @@ SHELL	:= /bin/bash
 NAME	:= accounts
 
 CC		:= c++
-CFLAGS	:= #-Wall -Wextra -Werror
+CFLAGS	:= -Wall -Wextra -Werror
 CFLAGS	+= -std=c++98
 
 SRCS	:= tests.cpp Account.cpp
