fix eval mistakes

--- a/cpp02/ex03/Makefile
+++ b/cpp02/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: lorbke <lorbke@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 16:37:03 by lorbke            #+#    #+#              #
-#    Updated: 2023/05/05 20:39:07 by lorbke           ###   ########.fr        #
+#    Updated: 2023/05/06 22:36:39 by lorbke           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -44,9 +44,9 @@ GREEN		:= \033[0;32m
 
 # ______________________________________________________________________ RULES #
 
-.PHONY: all libmlx clean fclean re run val
+.PHONY: all build_mlx clean fclean re run val
 
-all: libmlx $(NAME)
+all: build_mlx $(NAME)
 
 $(NAME): $(OBJ_PATH) $(OBJ)
 	$(CC) $(CFLAGS) $(MLX_LINK) $(GL_LINK) $(OBJ) -o $(NAME)
@@ -57,7 +57,7 @@ $(OBJ_PATH):
 $(OBJ_PATH)/%.o: %.cpp
 	$(CC) $(CFLAGS) $(MLX_INC) -c $< -o $@
 
-libmlx:
+build_mlx:
 	@if [ ! -d $(MLX_PATH)/build ]; then \
 		cmake -S $(MLX_PATH) -B $(MLX_PATH)/build; \
 		make -C $(MLX_PATH)/build; \
