--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -6,40 +6,51 @@
 #    By: lorbke <lorbke@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/17 16:37:03 by lorbke            #+#    #+#              #
-#    Updated: 2023/04/17 21:56:07 by lorbke           ###   ########.fr        #
+#    Updated: 2023/05/08 22:12:59 by lorbke           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 # __________________________________________________________________ VARIABLES #
 
-SHELL	:= /bin/bash
+SHELL		:= /bin/bash
 
-NAME	:= animal
+NAME		:= animal
 
-CC		:= c++
-CFLAGS	:= -Wall -Wextra -Werror
-CFLAGS	+= -std=c++98
+CXX			:= c++
+CXXFLAGS	:= -Wall -Wextra -Werror
+CXXFLAGS	+= -std=c++98
 
-SRCS	:= main.cpp Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp
-OBJS	:= $(SRCS:.cpp=.o)
+SRC_DIR		:= src
+SRC			:= main.cpp Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp
+OBJ_DIR		:= obj
+OBJ			:= $(addprefix $(OBJ_DIR)/, $(SRC:.cpp=.o))
+
+INC_DIR		:= inc
+
+VPATH		:= $(SRC_DIR)
 
 # _____________________________________________________________________ COLORS #
 
-RED		:= \033[0;31m
-GREEN	:= \033[0;32m
+RED			:= \033[0;31m
+GREEN		:= \033[0;32m
+RESET		:= \033[0m
 
 # ______________________________________________________________________ RULES #
 
 all: $(NAME)
 
-$(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+$(NAME): $(OBJ_DIR) $(OBJ)
+	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
+	@echo -e "$(GREEN)$(NAME) [OK]$(RESET)"
 
-%.o: %.cpp
-	$(CC) $(CFLAGS) -c $< -o $@
+$(OBJ_DIR):
+	mkdir -p $(OBJ_DIR)
+
+$(OBJ_DIR)/%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -I$(INC_DIR) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	rm -rf $(OBJ_DIR)
 
 fclean: clean
 	rm -f $(NAME)
@@ -48,14 +59,11 @@ re: fclean all
 
 # ______________________________________________________________ TESTING RULES #
 
-test:
-	@$(SHELL) tester/tester.sh
-
 run: all
 	@./$(NAME)
 
 rawrun:
-	@$(CC) $(SRCS) -o $(NAME)
+	@$(CXX) $(SRC) -o $(NAME)
 	@./$(NAME)
 
 val: all
