--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -57,10 +57,26 @@ run: all
 	./$(NAME) 42.0f
 	@echo --------------------
 	./$(NAME) 42.42
+	@echo --------------------
+	./$(NAME) -42.42f
+	@echo --------------------
+	./$(NAME) 2147483648
 
 rawrun:
 	@$(CXX) $(SRC) -o $(NAME)
-	@./$(NAME)
+	./$(NAME) 0
+	@echo --------------------
+	./$(NAME) 0.0f
+	@echo --------------------
+	./$(NAME) nan
+	@echo --------------------
+	./$(NAME) 42.0f
+	@echo --------------------
+	./$(NAME) 42.42
+	@echo --------------------
+	./$(NAME) -42.42f
+	@echo --------------------
+	./$(NAME) 2147483648
 
 val: all
 	@valgrind --leak-check=full ./$(NAME)
