--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -56,6 +56,8 @@ run: all
 	@echo --------------------
 	./$(NAME) 42.0f
 	@echo --------------------
+	./$(NAME) 42.0xx
+	@echo --------------------
 	./$(NAME) 42.42
 	@echo --------------------
 	./$(NAME) -42.42f
