handle special cases

--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -63,6 +63,22 @@ run: all
 	./$(NAME) -42.42f
 	@echo --------------------
 	./$(NAME) 2147483648
+	@echo --------------------
+	./$(NAME) +inf
+	@echo --------------------
+	./$(NAME) +inff
+	@echo --------------------
+	./$(NAME) inf
+	@echo --------------------
+	./$(NAME) inff
+	@echo --------------------
+	./$(NAME) -inf
+	@echo --------------------
+	./$(NAME) -inff
+	@echo --------------------
+	./$(NAME) nan
+	@echo --------------------
+	./$(NAME) nanf
 
 rawrun:
 	@$(CXX) $(SRC) -o $(NAME)
