handle arithmetic exceptions

--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -48,37 +48,40 @@ re: fclean all
 # ______________________________________________________________ TESTING RULES #
 
 run: all
-	./$(NAME) 0
+	@echo ===========================================================
+	-./$(NAME) 0
 	@echo --------------------
-	./$(NAME) 0.0f
+	-./$(NAME) 0.0f
 	@echo --------------------
-	./$(NAME) nan
+	-./$(NAME) nan
 	@echo --------------------
-	./$(NAME) 42.0f
+	-./$(NAME) 42.0f
 	@echo --------------------
-	./$(NAME) 42.0xx
+	-./$(NAME) 42.0xx
 	@echo --------------------
-	./$(NAME) 42.42
+	-./$(NAME) 42.42
 	@echo --------------------
-	./$(NAME) -42.42f
+	-./$(NAME) -42.42f
 	@echo --------------------
-	./$(NAME) 2147483648
+	-./$(NAME) 2147483648
 	@echo --------------------
-	./$(NAME) +inf
+	-./$(NAME) +inf
 	@echo --------------------
-	./$(NAME) +inff
+	-./$(NAME) +inff
 	@echo --------------------
-	./$(NAME) inf
+	-./$(NAME) inf
 	@echo --------------------
-	./$(NAME) inff
+	-./$(NAME) inff
 	@echo --------------------
-	./$(NAME) -inf
+	-./$(NAME) -inf
 	@echo --------------------
-	./$(NAME) -inff
+	-./$(NAME) -inff
 	@echo --------------------
-	./$(NAME) nan
+	-./$(NAME) nan
 	@echo --------------------
-	./$(NAME) nanf
+	-./$(NAME) nanf
+	@echo --------------------
+	-./$(NAME) 42+42
 
 rawrun:
 	@$(CXX) $(SRC) -o $(NAME)
