kinda finish ex00

--- a/cpp09/ex00/Makefile
+++ b/cpp09/ex00/Makefile
@@ -9,7 +9,7 @@ CXXFLAGS := -Wall -Wextra -Werror
 CXXFLAGS += -std=c++98
 
 SRC_DIR  := src
-SRC      := main.cpp 
+SRC      := main.cpp BitcoinExchange.cpp
 OBJ_DIR  := obj
 OBJ      := $(addprefix $(OBJ_DIR)/, $(SRC:.cpp=.o))
 
