finish except for error handling

--- a/cpp09/ex00/Makefile
+++ b/cpp09/ex00/Makefile
@@ -48,7 +48,7 @@ re: fclean all
 # ______________________________________________________________ TESTING RULES #
 
 run: all
-	@./$(NAME)
+	@./$(NAME) input.txt
 
 rawrun:
 	@$(CXX) $(SRC) -o $(NAME)
