--- a/cpp09/ex01/Makefile
+++ b/cpp09/ex01/Makefile
@@ -48,13 +48,31 @@ re: fclean all
 # ______________________________________________________________ TESTING RULES #
 
 run: all
-	@./$(NAME) "8 9 * 9 - 9 - 9 - 4 - 1 +"
+	-@./$(NAME) "8 9 * 9 - 9 - 9 - 4 - 1 +"
 	@echo ------------------------------------------
-	@./$(NAME) "7 7 * 7 -"
+	-@./$(NAME) "7 7 * 7 -"
 	@echo ------------------------------------------
-	@./$(NAME) "1 2 * 2 / 2 * 2 4 - +"
+	-@./$(NAME) "1 2 * 2 / 2 * 2 4 - +"
 	@echo ------------------------------------------
-	@./$(NAME) "(1 + 1)"
+	-@./$(NAME) "(1 + 1)"
+	@echo ------------------------------------------
+	-@./$(NAME) "1 1 1"
+	@echo ------------------------------------------
+	-@./$(NAME) "1 1 1 +"
+	@echo ------------------------------------------
+	-@./$(NAME) "1 1 1 + -"
+	@echo ------------------------------------------
+	-@./$(NAME) "1 1 1 + - -"
+	@echo ------------------------------------------
+	-@./$(NAME) "1 0 /"
+	@echo ------------------------------------------
+	-@./$(NAME) ""
+	@echo ------------------------------------------
+	-@./$(NAME) "0"
+	@echo ------------------------------------------
+	-@./$(NAME) "42"
+	@echo ------------------------------------------
+	-@./$(NAME) "      "
 	@echo ------------------------------------------
 	
 
