--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -50,6 +50,30 @@ re: fclean all
 run: all
 	@./$(NAME)
 
+test: all
+	-./$(NAME)
+	@echo -e "-------------------------------------"
+	-./$(NAME) 1
+	@echo -e "-------------------------------------"
+	-./$(NAME) 1 2
+	@echo -e "-------------------------------------"
+	-./$(NAME) "1 3 2"
+	@echo -e "-------------------------------------"
+	-./$(NAME) 1 1
+	@echo -e "-------------------------------------"
+	-./$(NAME) a d 1
+	@echo -e "-------------------------------------"
+	-./$(NAME) -1 1 0
+	@echo -e "-------------------------------------"
+	-./$(NAME) 1 1
+	@echo -e "-------------------------------------"
+	-./$(NAME) 2147483647
+	@echo -e "-------------------------------------"
+	-./$(NAME) 2147483648
+	@echo -e "-------------------------------------"
+	-./$(NAME) $$(./generate_numbers.sh)
+
+
 rawrun:
 	@$(CXX) $(SRC) -o $(NAME)
 	@./$(NAME)
