--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -50,6 +50,9 @@ re: fclean all
 run: all
 	@./$(NAME)
 
+debug: CXXFLAGS += -DDEBUG=1
+debug: re
+
 test: all
 	-./$(NAME)
 	@echo -e "-------------------------------------"
