--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -79,8 +79,8 @@ test: all
 	-./$(NAME) 2147483648
 	@echo -e "-------------------------------------"
 	-./$(NAME) $$(./generate_numbers.sh)
-	@echo -e "-------------------------------------"
-	-./$(NAME) 50 1 49 2 48 3 47 4 46 5 45 6 44 7 43 8 42 9 0 41 10 40 11 39 12 38 13 37 14 36 15 35 1 16 34 17 33 18 32 19 31 20 30 21 29 22 28 23 27 1 1 24 26 25
+	# @echo -e "-------------------------------------"
+	# -./$(NAME) 50 1 49 2 48 3 47 4 46 5 45 6 44 7 43 8 42 9 0 41 10 40 11 39 12 38 13 37 14 36 15 35 1 16 34 17 33 18 32 19 31 20 30 21 29 22 28 23 27 1 1 24 26 25
 
 
 rawrun:
