--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -21,6 +21,7 @@ VPATH    := $(SRC_DIR)
 
 RED      := \033[0;31m
 GREEN    := \033[0;32m
+BLUE     := \033[0;34m
 RESET    := \033[0m
 
 # ______________________________________________________________________ RULES #
@@ -47,6 +48,10 @@ re: fclean all
 
 # ______________________________________________________________ TESTING RULES #
 
+debug: CXXFLAGS += -DDEBUG
+debug: re
+	@echo -e "$(BLUE)DEBUG MODE ACTIVE$(RESET)"
+
 run: all
 	@echo ===========================================================
 	-./$(NAME) 0
@@ -60,6 +65,14 @@ run: all
 	-./$(NAME) 42.0xx
 	@echo --------------------
 	-./$(NAME) 42.42
+	@echo --------------------
+	-./$(NAME) -42.42
+	@echo --------------------
+	-./$(NAME) --42.42
+	@echo --------------------
+	-./$(NAME) +42.42
+	@echo --------------------
+	-./$(NAME) ++42.42
 	@echo --------------------
 	-./$(NAME) -42.42f
 	@echo --------------------
@@ -82,6 +95,12 @@ run: all
 	-./$(NAME) nanf
 	@echo --------------------
 	-./$(NAME) 42+42
+	@echo --------------------
+	-./$(NAME) 42ff
+	@echo --------------------
+	-./$(NAME) 42..0
+	@echo --------------------
+	-./$(NAME) --42
 
 rawrun:
 	@$(CXX) $(SRC) -o $(NAME)
