fixed float conversion bugs

--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -101,6 +101,12 @@ run: all
 	-./$(NAME) 42..0
 	@echo --------------------
 	-./$(NAME) --42
+	@echo --------------------
+	-./$(NAME) 42.0ff
+	@echo --------------------
+	-./$(NAME) 0.+f
+	@echo --------------------
+	-./$(NAME) 42..0f
 
 rawrun:
 	@$(CXX) $(SRC) -o $(NAME)
